# mp3-flac-indexer

./: CMakeLists.txt  README.md  config.sample
cmake/: FindTaglib.cmake
src/: main.cpp
